# omnirag

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
src/: api.rs  config.rs  hashing.rs  lib.rs  main.rs  redis_client.rs  sync.rs  web.rs
src/lua/: rag_helpers.lua
tests/: e2e_pipeline_test.rs  hashing_config_tests.rs  sync_tests.rs  web_api_tests.rs
