[package]
name = "omnirag"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
clap = { version = "4", features = ["derive", "env"] }
redis = { version = "0.27", features = ["tokio-comp", "aio"] }
reqwest = { version = "0.12", features = ["multipart", "json"] }
bytes = "1"
walkdir = "2"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
serde_urlencoded = "0.7"
